Prevent long words/content from stretching the discussion list width

--- a/less/common/sideNav.less
+++ b/less/common/sideNav.less
@@ -123,5 +123,6 @@
   .sideNavOffset {
     margin-top: 30px;
     flex: 1;
+    min-width: 0;
   }
 }
